# wavecord

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: codeql.yml  dependencies.yml  label-ci.yml  label-files.yml  label-pr.yml  label-stale.yml  labeler.yml  lint.yml  pre-commit.yml  publish.yml  release.yml  tests.yml
docs/: changelog.rst  conf.py  contributing.rst  faq.rst  filters.rst  index.rst  installation.rst  nodes.rst  quickstart.rst
docs/api/: core.rst  errors.rst  events.rst  filters.rst  ip.rst  region.rst  stats.rst  strategy.rst
docs/guides/: events.rst  players.rst  regions.rst
examples/: basic_bot.py  filters_bot.py
tests/: test_filters_advanced.py  test_models.py  test_wavecord.py
wavecord/: __init__.py  __libraries.py  __main__.py  errors.py  events.py  filter.py  ip.py  node.py  player.py  playlist.py  plugin.py  pool.py  region.py  search_type.py  stats.py  strategy.py  track.py  type_variables.py  warnings.py
wavecord/typings/: __init__.py
wavecord/utils/: __init__.py  classproperty.py
